package edu.hitsz.aircraft;

public abstract class EnemyAircraft extends AbstractAircraft{
    public EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp){
        super(locationX, locationY, speedX, speedY, hp);
    }
}
